k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wheel-of-names
  labels:
    app.kubernetes.io/name: wheel-of-names
spec:
  selector:
    app.kubernetes.io/name: wheel-of-names
  ports:
    - name: http
      port: 80
      targetPort: http
